# xcode_uniffi

./: .gitignore  Cargo.toml  README.md  xcode_build_system.md
src/: main.rs
src/xcodebind_gen/: cargo_helper.rs  cmd.rs  mod.rs  source_file_generator.rs  xcode_project.rs
src/xcodebind_gen/pbxproj_parser/: mod.rs  xcode_pbxproj_parser.rs
src/xcodebind_gen/pbxproj_parser/helpers/: mod.rs  nom_combinators.rs  string_helper.rs  vector_helpers.rs
src/xcodebind_gen/pbxproj_parser/types/: end_reason.rs  mod.rs  plist_item.rs  plist_key.rs  plist_key_value_item.rs  plist_section_item.rs  plist_tuple_item.rs  plist_tuple_value.rs  plist_value.rs  types_traits.rs
test_data/: proj_12.json  project.pbxproj
