[package]
name = "xcode_uniffi"
version = "1.0.4"
edition = "2021"
license = "MPL-2.0"
authors = ["Jacob Hatami <mjhatamy@gmail.com>"]
description = "Xcode framework generator/updater tool for rust UniFFI"
homepage = "https://github.com/mjhatamy/xcode_uniffi"
keywords = ["ffi", "bindgen", "xcode", "swift"]

[dependencies]
cargo_metadata = "0.14.1"
clap = { version = "3", features = ["derive", "cargo"] }
crc = "2.1.0"
nom = { version = "7.1.0", default-features = false }
colored = "2.0.0"
convert_case = "0.5.0"
pathdiff = "0.2.1"
chrono = "0.4.1"

[dev-dependencies]
serde_derive = { version = "1.0.2" }
